--- a/publications.html
+++ b/publications.html
@@ -74,72 +74,70 @@
     </style>
 </head>
 <body>
-    <!-- Navigation Bar -->
-  <div class="navbar">
-    <a href="index.html">Home</a>
-    <a href="publications.html">Publications</a>
-    <a href="teaching.html">Teaching</a>
-</div>
-
+    <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="publications.html">Publications</a>
+        <a href="teaching.html">Teaching</a>
+    </div>
 
     <div class="container">
         <h1>Publications</h1>
         <ul>
             <li>
+                <span class="author-highlight">R Axelrod*</span>, S Bar Yehuda, O Toker, N Zigman, I Goren, V Mourad, ...<br>
+                <a href="https://doi.org/10.1093/ecco-jcc/jjy166" class="publication-link" target="_blank">
+                    <em>The association of inflammatory bowel diseases with autoimmune disorders: a report from the epi-IIRN</em>
+                </a><br>
+                <strong>Journal of Crohn's and Colitis</strong>, 13(3), 324-329, 2019. <em>*Equal contribution</em>
+            </li>
+            <li>
                 <span class="author-highlight">R Axelrod</span>, D Nevo<br>
-                <a href="https://doi.org/10.1111/biom.13743" class="publication-link" target="_blank">
+                <a href="https://doi.org/10.1111/biom.13797" class="publication-link" target="_blank">
                     <em>A sensitivity analysis approach for the causal hazard ratio in randomized and observational studies</em>
                 </a><br>
                 <strong>Biometrics</strong>, 79(3), 2743-2756, 2023.
             </li>
             <li>
                 R Goldsmith, R Dichtiar, T Shimony, L Nitsan, <span class="author-highlight">R Axelrod</span>, I Laxer-Asael, ...<br>
-                <a href="https://doi.org/10.1186/s12877-022-03053-7" class="publication-link" target="_blank">
+                <a href="https://bmcgeriatr.biomedcentral.com/articles/10.1186/s12877-022-03171-8" class="publication-link" target="_blank">
                     <em>Comparisons in polypharmacy over a decade in community-dwelling older adults-findings from Israel national health and nutrition surveys</em>
                 </a><br>
                 <strong>BMC Geriatrics</strong>, 22(1), 502, 2022.
             </li>
             <li>
                 T Sinai, <span class="author-highlight">R Axelrod</span>, T Shimony, M Boaz, V Kaufman-Shriqui<br>
-                <a href="https://doi.org/10.3390/foods10123054" class="publication-link" target="_blank">
+                <a href="https://www.mdpi.com/2304-8158/10/12/3054" class="publication-link" target="_blank">
                     <em>Dietary patterns among adolescents are associated with growth, socioeconomic features, and health-related behaviors</em>
                 </a><br>
                 <strong>Foods</strong>, 10(12), 3054, 2021.
             </li>
             <li>
                 R Doyev, <span class="author-highlight">R Axelrod</span>, L Keinan-Boker, T Shimony, R Goldsmith, L Nitsan, ...<br>
-                <a href="https://doi.org/10.1093/jn/nxab017" class="publication-link" target="_blank">
+                <a href="https://pubmed.ncbi.nlm.nih.gov/33693862/" class="publication-link" target="_blank">
                     <em>Energy intake is highly associated with handgrip strength in community-dwelling elderly adults</em>
                 </a><br>
-                <strong>The Journal of Nutrition</strong>, 151(5), 1249-1255, 2021.
+                <strong>The Journals of Gerontology: Series A</strong>, 76(11), 2072–2078, 2021.
             </li>
             <li>
                 T Berman, Z Barnett-Itzhaki, T Göen, Z Hamama, <span class="author-highlight">R Axelrod</span>, ...<br>
-                <a href="https://doi.org/10.1016/j.envres.2020.108739" class="publication-link" target="_blank">
+                <a href="https://doi.org/10.1016/j.envres.2019.108739" class="publication-link" target="_blank">
                     <em>Organophosphate pesticide exposure in children in Israel: Dietary associations and implications for risk assessment</em>
                 </a><br>
                 <strong>Environmental Research</strong>, 182, 108739, 2020.
             </li>
             <li>
                 T Sinai, M Bromberg, <span class="author-highlight">R Axelrod</span>, T Shimony, AH Stark, L Keinan-Boker<br>
-                <a href="https://doi.org/10.1016/j.jpag.2020.03.009" class="publication-link" target="_blank">
+                <a href="https://www.sciencedirect.com/science/article/abs/pii/S1083318820302072" class="publication-link" target="_blank">
                     <em>Menarche at an earlier age: results from two national surveys of Israeli youth, 2003 and 2016</em>
                 </a><br>
                 <strong>Journal of Pediatric and Adolescent Gynecology</strong>, 33(5), 459-465, 2020.
             </li>
             <li>
                 T Berman, Z Barnett-Itzhaki, <span class="author-highlight">R Axelrod</span>, L Keinan-Boker, T Shimony, ...<br>
-                <a href="https://doi.org/10.1016/j.envint.2018.09.005" class="publication-link" target="_blank">
+                <a href="https://www.sciencedirect.com/science/article/pii/S0160412018317495" class="publication-link" target="_blank">
                     <em>Socioeconomic inequalities in exposure to environmental tobacco smoke in children in Israel</em>
                 </a><br>
-                <strong>Environment International</strong>, 121, 643-648, 2018.
-            </li>
-            <li>
-                S Bar Yehuda, <span class="author-highlight">R Axelrod</span>, O Toker, N Zigman, I Goren, V Mourad, ...<br>
-                <a href="https://doi.org/10.1093/ecco-jcc/jjy129" class="publication-link" target="_blank">
-                    <em>The association of inflammatory bowel diseases with autoimmune disorders: a report from the epi-IIRN</em>
-                </a><br>
-                <strong>Journal of Crohn's and Colitis</strong>, 13(3), 324-329, 2019.
+                <strong>Environmental Research</strong>, 167, 228–234, 2018.
             </li>
         </ul>
         <a href="index.html" class="back-link">&larr; Back to Home</a>
